force-app/main/default/objects/Pro_File_Field_Mapping_mdt__mdt/fields/Activate__c.field-meta.xml
<CustomField>
    <fullName>Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>