force-app/main/default/objects/Pro_File_Field_Mapping_mdt__mdt/fields/Lookup_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API__c</fullName>
    <label>Lookup Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>