force-app/main/default/objects/Pro_File_Field_Mapping_mdt__mdt/fields/Lookup_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object_API__c</fullName>
    <description>If Lookup, the target object</description>
    <label>Lookup Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>