force-app/main/default/objects/Pro_File_Field_Mapping_mdt__mdt/fields/Transformation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Rule__c</fullName>
    <label>Transformation Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>